[package]
name = "safecast"
version = "0.1.3"
authors = ["haydn@tinychain.net"]
edition = "2018"
license = "Apache-2.0"
description = "Traits to define safe casting between types"
repository = "https://github.com/haydnv/safecast.git"
readme = "README.md"

categories = ["rust-patterns"]
keywords = ["safe", "cast", "casting", "as"]

[dependencies]

[dev-dependencies]
serde_json = "1.0"
